--- a/.github/workflows/update_star_count.yml
+++ b/.github/workflows/update_star_count.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - main
     paths:
-      - src/days
+      - src/days/**
     
   workflow_dispatch:                             
   
